More updates. Introduced livewire

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -19,6 +19,9 @@ $teal: #4dc0b5;
 $cyan: #39afd1;
 $dark: #152e4d;
 $primary:#2d3748 !default;
+$success: #def7ec;
+$danger: #fed7d7;
+$secondary: #e2e8f0;
 $light:white;
 $dark:#252f3f;
 
