Tons of updates.

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -20,6 +20,7 @@ $cyan: #39afd1;
 $dark: #152e4d;
 $primary:#2d3748 !default;
 $success: #def7ec;
+$warning: #feebc8;
 $danger: #fed7d7;
 $secondary: #e2e8f0;
 $light:white;
