Added user crud and ladda

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -28,7 +28,7 @@ $light:white;
 $dark:#252f3f;
 
 $border-radius: .375rem;
-
+$form-feedback-invalid-color:darken($danger, 30);
 $box-shadow-sm: 0 1px 3px 0 rgba(0,0,0,.1),0 1px 2px 0 rgba(0,0,0,.06);
 
 $container-max-widths: (
