Working on replacing Livewire with Unpoly

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,6 +5,8 @@
 // Variables
 @import 'variables';
 
+@import '~sweetalert2/src/sweetalert2';
+
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 @import '~bootstrap-datepicker/dist/css/bootstrap-datepicker.css';
